syntax = "proto3";

package sart;

// import "google/protobuf/empty.proto";
// import "google/protobuf/any.proto";

service FibApi {
	rpc GetRoutes(GetRoutesRequest) returns (GetRoutesResponse);
}

message GetRoutesRequest {
	uint32 table = 1;
	IpVersion version = 2;
}

message GetRoutesResponse {
	repeated Route routes = 1;
}

message Route {
	uint32 table_id = 1;
	IpVersion ip_version = 2;
	string destination = 3;
	Protocol protocol = 4;
	Scope scope = 5;
	Type type = 6;
	repeated RtNextHop next_hops = 7;
	string source = 8;
	AdministrativeDistance ad = 9;
	uint32 priority = 10;
	bool ibgp = 11;
}

message RtNextHop {
	string gateway = 1;
	uint32 weight = 2;
	enum NextHopFlags {
		EMPTY = 0; DEAD = 1; PERVASIVE = 2; ONLINK = 3; OFFLOAD = 4; LINKDOWN = 16; UNRESOLVED = 32;
	}
	NextHopFlags flags = 3;
	uint32 interface = 4;
}

// message
enum IpVersion {
	Unkown = 0;
	V4 = 2;
	V6 = 10;
}

enum AdministrativeDistance {
	ADConnected  = 0;
	ADStatic     = 1;
	ADEBGP       = 20;
	ADOSPF       = 110;
	ADRIP        = 120;
	ADIBGP       = 200;
}

enum Protocol {
	Unspec = 0;
	Redirect = 1;
	Kernel = 2;
	Boot = 3;
	Static = 4;
	Bgp = 186;
	IsIs = 187;
	Ospf = 188;
	Rip = 189;
}

enum Type {
	UnspecType = 0;
	Unicast = 1;
	Local = 2;
	Broadcast = 3;
	Anycast = 4;
	Multicast = 5;
	Blackhole = 6;
	Unreachable = 7;
	Prohibit = 8;
	Throw = 9;
	Nat = 10;
}

enum Scope {
	Universe = 0;
	Site = 200;
	// Link = 253;
	// Host = 254;
	// Nowhere = 255;
}
